--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.js-lib</groupId>
 	<artifactId>js-xhtml-template</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.2-SNAPSHOT</version>
 
 	<name>X(HT)ML Template Engine</name>
 	<description>Reference implementation for j(s)-lib template API, declarative, natural and based on X(HT)ML language.</description>
@@ -162,10 +162,24 @@
 		</dependency>
 	</dependencies>
 
+
+	<repositories>
+		<repository>
+			<id>js-lib</id>
+			<url>http://maven.js-lib.com/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>js-lib</id>
+			<url>http://maven.js-lib.com/</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<distributionManagement>
 		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>js-lib</id>
+			<url>http://maven.js-lib.com/</url>
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
