--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.js-lib</groupId>
 	<artifactId>js-xhtml-template</artifactId>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 
 	<name>X(HT)ML Template Engine</name>
 	<description>Reference implementation for j(s)-lib template API, declarative, natural and based on X(HT)ML language.</description>
