--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,11 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.10.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -80,9 +80,6 @@
 				<version>2.12</version>
 				<configuration>
 					<junitArtifactName>junit:junit</junitArtifactName>
-					<encoding>UTF-8</encoding>
-					<inputEncoding>UTF-8</inputEncoding>
-					<outputEncoding>UTF-8</outputEncoding>
 					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
 				</configuration>
 			</plugin>
@@ -111,9 +108,7 @@
 						</goals>
 						<configuration>
 							<show>private</show>
-							<additionalOptions>
-								<additionalOption>-Xdoclint:none</additionalOption>
-							</additionalOptions>
+							<doclint>none</doclint>
 						</configuration>
 					</execution>
 				</executions>
