--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.js-lib</groupId>
+			<artifactId>js-log-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.js-lib</groupId>
 			<artifactId>js-dom</artifactId>
 			<version>1.0.1</version>
 		</dependency>
